fixed img overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body{
     height: 450px;
     width: 300px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 15px;
+    overflow: hidden;
     border: 3px solid #111;
     position: relative;
 }
